# agents-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  DRAFT.md  README.md  pyproject.toml  session-example.py
.claude/: settings.json
.claude/hooks/: claude-logging.sh  debug-hook-input.sh  init-agent-logs.sh  save-planning-logs.sh
.cursor/: hooks.json  toggle-hooks.sh
.cursor/hooks/: init-agent-logs.sh  save-planning-logs-cursor.sh
agent_logs/: LOG.md
agent_logs/plans/: 2026-01-26-goodbye-world-test-plan.md  2026-01-26-hello-world-test-plan.md  2026-01-26-modify-logging-to-preserve-plan-editing.md  2026-01-26-plan-test-hook-hello-world.md  2026-01-26-planning-session-logger.md  2026-01-26-portable-planning-session-logger.md  2026-01-26-test-copy-behavior.md  2026-01-26-test-copy-workflow-1.md  2026-01-26-test-copy-workflow.md  2026-01-26-test-plan-for-logger.md  2026-01-27-claude-plan-auto-checklists-package-architecture-implementation.md  2026-01-27-claude-plan-print-goodbye-world-in-python.md  2026-01-27-claude-plan-print-hello-world-in-python.md  2026-01-27-plan-cursor-plan-mode-logging-support.md  2026-01-28-claude-agentsmd-review-claude-code-configuration-recommendations.md  2026-02-03-claude-peaches.md  2026-02-03-claude-plan.md  2026-02-03-claude-test-plan.md  2026-02-03-claude-watermelon.md  (+2 more)
global_settings/: CLAUDE.md  README.md  cc_update_global.sh
local_settings/: CLAUDE.md  README.md  cc_startup.sh  cc_update_local.sh
sample_project/: .gitignore  CLAUDE.md  README.md  main.py
tests/: README.md  conftest.py  test-planning-logger.sh  test_planning_session.py
(+46 files in other folders)
